# solana-c-nft

./: .env.example  Anchor.toml  Cargo.toml  package-lock.json  package.json  readme.md  uri.json
app/: types.ts  utils.ts
libs/account-compression/: Cargo.toml  idl.json
libs/account-compression/src/: lib.rs
libs/bubblegum/: Cargo.toml  idl.json
libs/bubblegum/src/: lib.rs
programs/solana-c-nft/: Cargo.toml
programs/solana-c-nft/src/: lib.rs
tests/: solana-c-nft.ts
