[workspace]
members = [
    "programs/solana-c-nft",
    "libs/account-compression",
    "libs/bubblegum"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-gen = { git = "https://github.com/ChewingGlass/anchor-gen.git" }
anchor-lang = "0.30.0"
solana-program = "1.18.11"